# crashcourse-backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.local-prod  MIGRATION.md  README.md  TODO.md  build.sh  db.sqlite3  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  seed.sh
backend/: admin.py  env_adapter.py  models.py  schema.py  settings.py  urls.py
backend/fixtures/: categories.json  courses.json  data.json  subcategories.json
backend/migrations/: 0001_initial.py  0002_auto_20210227_1705.py  0002_course.py  0003_auto_20210227_1752.py
core/: admin.py  api.py  models.py  schema.py  settings.py  urls.py  views.py
core/backend/: schema.py
core/fixtures/: category.json  course.json  subcategory.json
core/migrations/: 0001_initial.py  0002_alter_category_options_alter_subcategory_options.py  0003_alter_course_subcategory_category_parent_and_more.py  0004_alter_category_name.py  0005_alter_category_name_alter_course_category_and_more.py
core/seed/: data.json
docs/: api-reference.md  architecture.md  deployment.md  documentation-update-plan.md  technical-debt.md
